Remove legacy NeoForge metadata