@@ -5,10 +5,9 @@ import com.mojang.serialization.DataResult;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.core.registries.Registries;
-import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.ByteBufCodecs;
-import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
@@ -21,11 +20,22 @@ public record Dimensions(
         List<ResourceKey<Level>> dimensions
 ) {
     public static final String ERROR_INVALID_DIMENSIONS_SIZE = "Dimensions list must be empty or contain exactly two elements (current and target).";
-    public static final StreamCodec<RegistryFriendlyByteBuf, Dimensions> STREAM_CODEC = StreamCodec.composite(
-            ByteBufCodecs.collection(ArrayList::new, ResourceKey.streamCodec(Registries.DIMENSION)),
-            Dimensions::dimensions,
-            Dimensions::new
-    );
+    public void toNetwork(FriendlyByteBuf buf) {
+        buf.writeVarInt(dimensions.size());
+        for (ResourceKey<Level> key : dimensions) {
+            buf.writeResourceLocation(key.location());
+        }
+    }
+
+    public static Dimensions fromNetwork(FriendlyByteBuf buf) {
+        int size = buf.readVarInt();
+        List<ResourceKey<Level>> entries = new ArrayList<>(size);
+        for (int i = 0; i < size; i++) {
+            ResourceLocation id = buf.readResourceLocation();
+            entries.add(ResourceKey.create(Registries.DIMENSION, id));
+        }
+        return new Dimensions(entries);
+    }
     private static final MapCodec<Dimensions> BASE_MAP_CODEC = RecordCodecBuilder.mapCodec(instance -> instance.group(
             ResourceKey.codec(Registries.DIMENSION).listOf().fieldOf("dimensions").forGetter(Dimensions::dimensions)
     ).apply(instance, Dimensions::new));
@@ -55,10 +65,10 @@ public record Dimensions(
     }
 
     public Optional<ResourceKey<Level>> current() {
-        return dimensions.size() == 2 ? Optional.of(dimensions.getFirst()) : Optional.empty();
+        return dimensions.size() == 2 ? Optional.of(dimensions.get(0)) : Optional.empty();
     }
 
     public Optional<ResourceKey<Level>> target() {
-        return dimensions.size() == 2 ? Optional.of(dimensions.getLast()) : Optional.empty();
+        return dimensions.size() == 2 ? Optional.of(dimensions.get(1)) : Optional.empty();
     }
 }
